--- a/src/components/todo-list/todo/todo.module.scss
+++ b/src/components/todo-list/todo/todo.module.scss
@@ -7,7 +7,7 @@
   min-height: 50px;
   height: max-content;
   min-width: 600px;
-  max-width: 700px;
+  max-width: 80vw;
   border-radius: 5px;
   width: 100%;
   padding-left: 10px;
