--- a/src/components/todo-list/todo-list.module.scss
+++ b/src/components/todo-list/todo-list.module.scss
@@ -19,8 +19,9 @@
   border-radius: 10px;
   height: 50px;
   width: 100%;
-;
-
+  input {
+    padding-left: 15px;
+  }
 }
 .input {
   display: flex;
@@ -36,17 +37,24 @@
 }
 .button {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   padding: 0 10px;
   align-items: center;
+  gap: 10px;
   background-color: #c7d3d3;
   width: 19%;
+  max-width: 120px;
   height: 100%;
   border-radius: 5px;
   border: none;
   cursor: pointer;
   margin-left: 20px;
+  opacity: 80%;
+  transition: box-shadow 0.1s ease-in-out, opacity 0.1s ease-in-out;
+
   &:hover {
-    opacity: 80%;
+    box-shadow: 0 0 10px rgba(230, 225, 225, 0.5);
+    opacity: 100%;
+    transition: box-shadow 0.1s ease-in-out, opacity 0.1s ease-in-out;
   }
 }
