--- a/src/components/todo-list/todo/todo.module.scss
+++ b/src/components/todo-list/todo/todo.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
   background-color: coral;
   min-height: 50px;
-  height: max-content;
+  //height: max-content;
   min-width: 600px;
   max-width: 80vw;
   border-radius: 5px;
@@ -14,14 +14,15 @@
   overflow: visible;
   text-align: start;
   opacity: 90%;
-  transition: box-shadow 0.3s ease-in-out, opacity 0.3s ease-in-out;
-
+  transition: box-shadow 0.1s ease-in-out, opacity 0.1s ease-in-out;
+position: relative;
   &:hover {
     cursor: pointer;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     opacity: 100%;
-    transition: box-shadow 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    transition: box-shadow 0.1s ease-in-out, opacity 0.1s ease-in-out;
   }
+  z-index: 1;
 }
 
 .container2 {
@@ -33,8 +34,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 25px !important;
-  height: 25px !important;
+  width: 25px ;
+  height: 25px ;
   margin-right: 20px;
 
   &:checked {
@@ -57,24 +58,30 @@
   text-align: start;
   align-items: center;
   flex-grow: 1;
+  max-width: 900px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  white-space: normal;
+  //hyphens: auto;
+  word-break: break-word;
 
-  margin-right: 10px;
 }
 
 .button {
+  position: relative;
   svg {
     fill: black;
     font-size: 27px;
-    transition: fill 0.3s ease-in-out, font-size 0.3s ease-in-out;
-
+    transition: fill 0.2s ease-in-out, font-size 0.1s ease-in-out;
 
     &:hover {
-
       fill: red;
-      font-size: 35px;
-      transition: fill 0.3s ease-in-out, font-size 0.3s ease-in-out;
+      font-size: 32px;
+      transition: fill 0.1s ease-in-out, font-size 0.1s ease-in-out;
     }
+
   }
+  z-index: 2;
 
   display: flex;
   justify-content: center;
@@ -87,4 +94,12 @@
   transition: fill 0.3s ease-in-out, font-size 0.3s ease-in-out;
 
 
+}
+
+.counter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 5px;
+  margin-left: 10px;
 }
