--- a/src/components/todo-list/todo-list.module.scss
+++ b/src/components/todo-list/todo-list.module.scss
@@ -6,17 +6,23 @@
   //background-color: #dcc1c1;
   min-height: 90vh;
   min-width:70vw;
-  margin-top: 100px;
+  margin-top: 50px;
+  //max-height: 90vh;
+  //overflow: hidden;
 }
 
 .inputContainer {
+  position: sticky;
+  z-index: 3;
+
+  top: 0;
   display: flex;
   justify-content: space-between;
   //padding: 0 20px;
   align-items: center;
   flex-direction: row;
-  background-color: #efefef;
-  border-radius: 10px;
+  background-color: transparent;
+  border-radius: 5px;
   height: 50px;
   width: 100%;
   input {
@@ -49,12 +55,12 @@
   border: none;
   cursor: pointer;
   margin-left: 20px;
-  opacity: 80%;
+  opacity: 100%;
   transition: box-shadow 0.1s ease-in-out, opacity 0.1s ease-in-out;
 
   &:hover {
     box-shadow: 0 0 10px rgba(230, 225, 225, 0.5);
-    opacity: 100%;
-    transition: box-shadow 0.1s ease-in-out, opacity 0.1s ease-in-out;
+    background-color: #a7b7b7;
+    transition: box-shadow 0.1s ease-in-out, background-color 0.1s ease-in-out;
   }
 }
