delete all button + scss correct

--- a/src/components/todo-list/todo/todo.module.scss
+++ b/src/components/todo-list/todo/todo.module.scss
@@ -3,27 +3,25 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: coral;
-  min-height: 50px;
-  height: max-content;
+  background-color: #c7d3d3;
+  min-height: fit-content;
   min-width: 600px;
   max-width: 80vw;
   border-radius: 5px;
   width: 100%;
-  padding-left: 10px;
-  overflow: scroll;
-  text-align: start;
+  //height: fit-content;
+  padding: 0 20px;
   opacity: 90%;
   transition: box-shadow 0.1s ease-in-out, opacity 0.1s ease-in-out;
-  position: relative;
+  overflow: visible;
+  z-index: 1;
+
   &:hover {
     cursor: pointer;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     opacity: 100%;
     transition: box-shadow 0.1s ease-in-out, opacity 0.1s ease-in-out;
   }
-
-  z-index: 1;
 }
 
 .container2 {
@@ -56,16 +54,17 @@
 .text, .text2 {
   display: flex;
   justify-content: flex-start;
-  text-align: start;
   align-items: center;
-  flex-grow: 1;
-  max-width: 900px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  text-align: start;
+  width: 90%;
   white-space: normal;
-  //hyphens: auto;
+  hyphens: auto;
   word-break: break-word;
-  overflow: scroll;
+  overflow: visible;
+  height: fit-content;
+
+  margin: 10px 10px;
+
 
 }
 
@@ -76,17 +75,16 @@
     fill: black;
     font-size: 27px;
     transition: fill 0.2s ease-in-out, font-size 0.1s ease-in-out;
+  }
 
-    &:hover {
+  &:hover {
+    svg {
       transition: fill 0.1s ease-in-out, font-size 0.1s ease-in-out;
       fill: red;
       font-size: 32px;
     }
-
   }
-
   z-index: 2;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,14 +94,11 @@
   border: none;
   cursor: pointer;
   transition: fill 0.3s ease-in-out, font-size 0.3s ease-in-out;
-
-
 }
 
 .counter {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 5px;
-  margin-left: 10px;
+
 }
