--- a/src/components/todo-list/todo-list.module.scss
+++ b/src/components/todo-list/todo-list.module.scss
@@ -6,7 +6,8 @@
   //background-color: #dcc1c1;
   min-height: 90vh;
   min-width:70vw;
-  margin-top: 50px;
+  max-width: 80vw;
+  position: relative;
   //max-height: 90vh;
   //overflow: hidden;
 }
@@ -14,11 +15,9 @@
 .inputContainer {
   position: sticky;
   z-index: 3;
-
   top: 0;
   display: flex;
   justify-content: space-between;
-  //padding: 0 20px;
   align-items: center;
   flex-direction: row;
   background-color: transparent;
@@ -41,7 +40,7 @@
 
 
 }
-.button {
+.button, .buttonDelete {
   display: flex;
   justify-content: center;
   padding: 0 10px;
@@ -62,5 +61,52 @@
     box-shadow: 0 0 10px rgba(230, 225, 225, 0.5);
     background-color: #a7b7b7;
     transition: box-shadow 0.1s ease-in-out, background-color 0.1s ease-in-out;
+
+    svg {
+      transition: fill 0.1s ease-in-out, font-size 0.1s ease-in-out;
+      fill: lightgreen;
+    }
+  }
+}
+.todos {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-top: 20px;
+  z-index: 2;
+  flex-direction: column;
+  width: 100%;
+  max-width: 70vw;
+  max-height: 70vh;
+  overflow: scroll;
+  gap: 10px;
+  border-radius: 5px;
+  //background-color: #bc60a5;
+}
+
+.buttonDelete {
+  justify-content: space-around;
+  width: 100%;
+  min-width: 200px;
+  height: 60px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  cursor: pointer;
+  svg {
+    fill: black;
+    font-size: 27px;
+    transition: fill 0.2s ease-in-out, font-size 0.1s ease-in-out;
+  }
+
+  &:hover {
+    svg {
+      transition: fill 0.1s ease-in-out, font-size 0.1s ease-in-out;
+      fill: red;
+    }
+  }
+  .p {
+    text-align: center;
   }
 }
