--- a/src/components/todo-list/todo-list.module.scss
+++ b/src/components/todo-list/todo-list.module.scss
@@ -9,7 +9,7 @@
   max-width: 80vw;
   position: relative;
   //max-height: 90vh;
-  //overflow: hidden;
+  overflow: auto;
 }
 
 .inputContainer {
@@ -64,7 +64,7 @@
 
     svg {
       transition: fill 0.1s ease-in-out, font-size 0.1s ease-in-out;
-      fill: lightgreen;
+      fill: #007d00;
     }
   }
 }
@@ -88,7 +88,8 @@
 .buttonDelete {
   justify-content: space-around;
   width: 100%;
-  min-width: 200px;
+  min-width: 160px;
+  padding: 0 20px;
   height: 60px;
   position: absolute;
   bottom: 0;
