--- a/src/components/todo-list/todo-list.module.scss
+++ b/src/components/todo-list/todo-list.module.scss
@@ -1,15 +1,22 @@
 .container {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
   //background-color: #dcc1c1;
-  min-height: 90vh;
-  min-width:70vw;
-  max-width: 80vw;
+  min-height: 80vh;
+  //min-width:70vw;
+  width: 80vw;
   position: relative;
-  //max-height: 90vh;
   overflow: auto;
+  @media screen and (max-width: 600px) {
+    width: 100vw;
+    height: 100vh;
+    padding-top: 20px;
+  }
+  padding: 10px;
+
+
 }
 
 .inputContainer {
@@ -47,8 +54,9 @@
   align-items: center;
   gap: 10px;
   background-color: #c7d3d3;
-  width: 19%;
-  max-width: 120px;
+  //width: 10%;
+  min-width: 100px;
+  max-width: 200px;
   height: 100%;
   border-radius: 5px;
   border: none;
@@ -68,6 +76,13 @@
     }
   }
 }
+
+.button {
+  @media screen and (max-width: 350px) {
+    min-width: 40px;
+    max-width: 200px;
+  }
+}
 .todos {
   flex-grow: 1;
   display: flex;
@@ -77,24 +92,38 @@
   z-index: 2;
   flex-direction: column;
   width: 100%;
-  max-width: 70vw;
-  max-height: 70vh;
+  //max-width: 70vw;
+  max-height: 65vh;
   overflow: scroll;
-  gap: 10px;
+  //gap: 10px;
   border-radius: 5px;
   //background-color: #bc60a5;
+  @media screen and (max-width: 600px) {
+    gap: 0;
+  }
+
 }
 
 .buttonDelete {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
   justify-content: space-around;
+  justify-self: flex-end;
+  align-self: flex-end;
   width: 100%;
   min-width: 160px;
   padding: 0 20px;
   height: 60px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
   cursor: pointer;
+  @media screen and (max-width: 300px) {
+    max-width: 40px;
+    width: 40px;
+    min-width: 110px;
+    height: 40px;
+  }
+
+
   svg {
     fill: black;
     font-size: 27px;
