--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,9 +1,20 @@
 .app {
   display: flex;
   text-align: center;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   min-height: 100vh;
   min-width: 100vw;
   flex-direction: column;
+  @media screen and (max-width: 600px) {
+    * {
+      font-size: 16px;
+    }
+  }
+
+  @media screen and (max-width: 300px) {
+    * {
+      font-size: 10px;
+    }
+  }
 }
