--- a/src/components/todo-list/todo/todo.module.scss
+++ b/src/components/todo-list/todo/todo.module.scss
@@ -5,8 +5,9 @@
   align-items: center;
   background-color: #c7d3d3;
   min-height: fit-content;
-  min-width: 600px;
-  max-width: 80vw;
+  //min-width: 600px;
+  //max-width: 80vw;
+  //width: 100%;
   border-radius: 5px;
   width: 100%;
   //height: fit-content;
@@ -21,6 +22,11 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     opacity: 100%;
     transition: box-shadow 0.1s ease-in-out, opacity 0.1s ease-in-out;
+  }
+
+  @media screen and (max-width: 600px) {
+    font-size: 16px;
+    margin: 10px 0;
   }
 }
 
